test/semantic_errors/invalid_main_def3.mc
int main; /* redefinition of 'main' as different kind of symbol */

int main() {
    return 0;
}